manifests/OpenWebUI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: ai-stack
  labels:
    app: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:main
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: openwebui-data
            mountPath: /app/backend/data
      volumes:
        - name: openwebui-data
          persistentVolumeClaim:
            claimName: openwebui-pvc
