manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: ai-stack
spec:
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
