manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-stack-ingress
  namespace: ai-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /webui
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080
          - path: /ollama
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
